# dali

./: .gitignore  Cargo.toml
.github/workflows/: main.yml
src/: lib.rs  llm.rs  main.rs
ui/: appwindow.slint  messages.slint
ui/pages/: video_compress.slint
