[package]
name = "dali"
version = "0.1.0"
authors = ["LeeeSe <724818342@qq.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openai_dive = "0.4.8"
reqwest = "0.12.4"
slint = "1.5"
tokio = { version = "1.37.0",  features = ["full"] }

[build-dependencies]
slint-build = "1.5"
