[package]
name = "dali"
version = "0.1.6"
authors = ["LeeeSe <724818342@qq.com>"]
edition = "2021"
build = "build.rs"
description = "LLM 高性能本地客户端"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openai_dive = { version = "0.4.8", features = ["stream"] }
env_home = "0.1.0"
futures = "0.3.30"
i-slint-backend-winit = "1.6.0"
reqwest = "0.12.4"
serde = { version = "1.0.202", features = ["derive"] }
slint = { version = "1.6", features = ["renderer-skia"] }
# slint = "1.6"
tokio = { version = "1.37.0", features = ["full"] }
toml = "0.8.13"
peak_alloc = "0.2.1"

[build-dependencies]
slint-build = "1.6"

[package.metadata.bundle]
name = "Dali"
identifier = "com.doe.dali"
icon = ["ui/icon.png"]
copyright = "Copyright (c) LeeeSe 2022. All rights reserved."
short_description = "LLM 高性能本地客户端"
resources = ["ui/icon.png"]
